--- a/2016-07.md
+++ b/2016-07.md
@@ -18,7 +18,8 @@
 
 八月的工作可能中心时间不是很多：
 重要任务：
-* 丰富CalendarCompnent库的种类，多添加几个日历的实现，形成一个稳定版本。
+* 丰富CalendarCompnent库的种类，多添加几个日历的实现，形成一个稳定版本。  <br>   
+
 次重要任务：
 * 研究报表库[MPAndroidChart](https://github.com/PhilJay/MPAndroidChart)、[StockChart](https://github.com/AndroidJiang/StockChart)
 
