--- a/work-blog/Android视图基础/仿网易音乐听歌识曲-麦克风动画.md
+++ b/work-blog/Android视图基础/仿网易音乐听歌识曲-麦克风动画.md
@@ -159,4 +159,25 @@ public class MainActivity extends AppCompatActivity {
 
 ![waveview](https://github.com/dengshiwei/work-summary/blob/master/work-blog/Android%E8%A7%86%E5%9B%BE%E5%9F%BA%E7%A1%80/%E5%9B%BE%E5%BA%93/waveview1.gif)
 
+#### 五、扩展
+
+1、修改画笔样式
+
+```java
+paint.setStyle(Paint.Style.STROKE);
+paint.setStrokeWidth(4);
+```
+形成圆环的波形
+![circle](https://github.com/dengshiwei/work-summary/blob/master/work-blog/Android%E8%A7%86%E5%9B%BE%E5%9F%BA%E7%A1%80/%E5%9B%BE%E5%BA%93/circlewave.gif)
+
+2、修改绘制的图形为椭圆
+
+```java
+int length = circleWidth + gapLength;
+RectF rectF = new RectF(circleX - length, circleY - length/2,
+        circleX + length, circleY + length/2);
+canvas.drawOval(rectF, paint);
+````
+![oval](https://github.com/dengshiwei/work-summary/blob/master/work-blog/Android%E8%A7%86%E5%9B%BE%E5%9F%BA%E7%A1%80/%E5%9B%BE%E5%BA%93/ovalwave.gif)
+
 至此，简单的模仿了下。
