--- a/work-blog/Java基础知识/设计模式/装饰者模式/设计模式——装饰者模式.md
+++ b/work-blog/Java基础知识/设计模式/装饰者模式/设计模式——装饰者模式.md
@@ -20,7 +20,7 @@
 讲解装饰模式使用最多的例子莫过于人穿衣服的例子，人穿衣戴帽就是装饰的作用。
 
 **定义抽象类，人的角色**
-````java
+```java
 /**
  * 定义一个人的抽象类
  * @author Iflytek_dsw
@@ -35,6 +35,7 @@ abstract class People {
 	public abstract void dressed();
 }
 ```
+
 **定义个具体的实例类实现接口，工人类**
 ```java
 /**
