修正客户端代码

--- a/work-blog/Java基础知识/设计模式/观察者模式/设计模式——观察者模式.md
+++ b/work-blog/Java基础知识/设计模式/观察者模式/设计模式——观察者模式.md
@@ -176,6 +176,24 @@ class AndoterWX extends Observable{
 ```
 集成Observable类实现一个被观察者，然后通过setChanged()设置状态改变，通过notiflyObservers来通知观察者改变。
 
+**客户端**
+```java
+public class Client {
+	public static void main(String []args){
+		
+		User Jack = new User("Jack");
+		User Lucy = new User("Lucy");
+		
+		AndoterWX  andoterWX = new AndoterWX();
+		andoterWX.addObserver(Jack);
+		andoterWX.addObserver(Lucy);
+		
+		andoterWX.postArtical("设计模式——观察者模式");
+		
+	}
+}
+```
+
 **结果**
 ```java
 订阅者：Lucy收到消息：设计模式——观察者模式
