添加引用的文献

--- a/work-blog/Java基础知识/设计模式/访问者模式/设计模式——访问者模式.md
+++ b/work-blog/Java基础知识/设计模式/访问者模式/设计模式——访问者模式.md
@@ -385,3 +385,7 @@ public class Client {
 
 
 两次分派技术**使客户端的请求不再被静态地绑定在元素对象上**，这个时候真正执行什么样的功能**同时取决于访问者类型和元素的类型**，就算**同一种元素类型，只要访问者的类型不同，最终执行功能也会不一样****。这样一来，就可以在元素对象不变的情况下，通过改变访问者类型来改变真正执行的功能。**
+
+参照文献：
+- [JAVA与模式》之访问者模式](http://www.cnblogs.com/java-my-life/archive/2012/06/14/2545381.html)
+- [行为型模式—访问者模式](http://www.cnblogs.com/5iedu/p/5649013.html)
