--- a/work-blog/Java基础知识/设计模式/单例模式/设计模式——单例模式.md
+++ b/work-blog/Java基础知识/设计模式/单例模式/设计模式——单例模式.md
@@ -94,7 +94,7 @@ public class Singleton {
 	private volatile static Singleton instance;
 	private Singleton(){};
 	
-	public static synchronized Singleton getInstance(){
+	public static Singleton getInstance(){
 		if(instance == null){
 			synchronized (Singleton.class) {
 				if(instance == null){
